# new_demo1

./: build.gradle  data.txt  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/: FileLogger.h  java_MMap.h  java_MemTest.h  java_NativeFileLogger.h  macro.h  stream_send_receive.h  threadpool.h  util.h
app/src/main/cpp/src/: FileLogger.cpp  java_MMap.cpp  java_MemTest.cpp  java_NativeFileLogger.cpp  stream_send_receive.cpp  threadpool.cpp  trace.c  util.cpp
app/src/main/res/layout/: activity_base.xml  activity_demo1.xml  (+9 more)
flutter_demo/: build.gradle
flutter_demo/src/main/: AndroidManifest.xml
flutter_module/: pubspec.yaml
flutter_module/lib/: main.dart
flutter_module/lib/test1/: Demo1.dart
gradle/wrapper/: gradle-wrapper.properties
multi-process/: build.gradle
multi-process/src/main/: AndroidManifest.xml
mylibrary/: build.gradle
mylibrary/src/main/: AndroidManifest.xml
mylibrary/src/main/cpp/: CMakeLists.txt  java_Test.cpp  java_Test.h  test.cpp  test.h
okhttp_demo/: build.gradle
okhttp_demo/src/main/: AndroidManifest.xml
retrofit_demo/: build.gradle
retrofit_demo/src/main/: AndroidManifest.xml
rxjava_demo/: build.gradle
rxjava_demo/src/main/: AndroidManifest.xml
server/: README.MD  build.gradle
server/src/main/: AndroidManifest.xml
server/src/main/cpp/: CMakeLists.txt
server/src/main/cpp/include/: HttpServer.h  Server.h  log.h
server/src/main/cpp/src/: HttpServer.cpp  Server.cpp  java_HttpServer.cpp
(+143 files in other folders)
